src/OpenCvSharp.Native/include/open_cv_sharp/imgproc.h

typedef struct jyppx_ocv_clahe jyppx_ocv_clahe;
typedef struct jyppx_ocv_line_segment_detector jyppx_ocv_line_segment_detector;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_collect_garbage(
    jyppx_ocv_clahe* clahe);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_corner_sub_pix(
    const jyppx_ocv_mat* image,
    float* corners_xy,
    int corner_count,
    int win_width,
    int win_height,
    int zero_zone_width,
    int zero_zone_height,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_good_features_to_track_count(
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    int max_corners,
    double quality_level,
    double min_distance,
    int block_size,
    int gradient_size,
    int use_harris_detector,
    double k,
    int* corner_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_good_features_to_track_fill(
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    int max_corners,
    double quality_level,
    double min_distance,
    int block_size,
    int gradient_size,
    int use_harris_detector,
    double k,
    float* corners_xy,
    int corner_capacity,
    int* corner_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_lines_count(
    const jyppx_ocv_mat* image,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn,
    double min_theta,
    double max_theta,
    int use_edgeval,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_lines_fill(
    const jyppx_ocv_mat* image,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn,
    double min_theta,
    double max_theta,
    int use_edgeval,
    float* lines,
    int line_capacity,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_lines_p_count(
    const jyppx_ocv_mat* image,
    double rho,
    double theta,
    int threshold,
    double min_line_length,
    double max_line_gap,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_lines_p_fill(
    const jyppx_ocv_mat* image,
    double rho,
    double theta,
    int threshold,
    double min_line_length,
    double max_line_gap,
    int* lines,
    int line_capacity,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_lines_point_set_count(
    const int* points_xy,
    int point_count,
    int lines_max,
    int threshold,
    double min_rho,
    double max_rho,
    double rho_step,
    double min_theta,
    double max_theta,
    double theta_step,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_lines_point_set_fill(
    const int* points_xy,
    int point_count,
    int lines_max,
    int threshold,
    double min_rho,
    double max_rho,
    double rho_step,
    double min_theta,
    double max_theta,
    double theta_step,
    double* lines,
    int line_capacity,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_circles_count(
    const jyppx_ocv_mat* image,
    int method,
    double dp,
    double min_dist,
    double param1,
    double param2,
    int min_radius,
    int max_radius,
    int* circle_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hough_circles_fill(
    const jyppx_ocv_mat* image,
    int method,
    double dp,
    double min_dist,
    double param1,
    double param2,
    int min_radius,
    int max_radius,
    float* circles,
    int circle_capacity,
    int* circle_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_calc_hist_uniform(
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    const int* channels,
    int channel_count,
    jyppx_ocv_mat* hist,
    const int* hist_size,
    int hist_dims,
    const float* ranges,
    int range_count,
    int accumulate);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_calc_back_project_uniform(
    const jyppx_ocv_mat* image,
    const int* channels,
    int channel_count,
    const jyppx_ocv_mat* hist,
    jyppx_ocv_mat* back_project,
    const float* ranges,
    int range_count,
    double scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_compare_hist(
    const jyppx_ocv_mat* h1,
    const jyppx_ocv_mat* h2,
    int method,
    double* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_create(
    int refine,
    double scale,
    double sigma_scale,
    double quant,
    double ang_th,
    double log_eps,
    double density_th,
    int n_bins,
    jyppx_ocv_line_segment_detector** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_imgproc_line_segment_detector_release(
    jyppx_ocv_line_segment_detector* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_detect(
    jyppx_ocv_line_segment_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* lines,
    jyppx_ocv_mat* width,
    jyppx_ocv_mat* prec,
    jyppx_ocv_mat* nfa);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_detect_count(
    jyppx_ocv_line_segment_detector* detector,
    const jyppx_ocv_mat* image,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_detect_fill(
    jyppx_ocv_line_segment_detector* detector,
    const jyppx_ocv_mat* image,
    float* lines,
    int line_capacity,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_draw_segments(
    jyppx_ocv_line_segment_detector* detector,
    jyppx_ocv_mat* image,
    const jyppx_ocv_mat* lines);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_draw_segments_array(
    jyppx_ocv_line_segment_detector* detector,
    jyppx_ocv_mat* image,
    const float* lines,
    int line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_compare_segments(
    jyppx_ocv_line_segment_detector* detector,
    int width,
    int height,
    const jyppx_ocv_mat* lines1,
    const jyppx_ocv_mat* lines2,
    jyppx_ocv_mat* image,
    int* mismatch_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line_segment_detector_compare_segments_array(
    jyppx_ocv_line_segment_detector* detector,
    int width,
    int height,
    const float* lines1,
    int line1_count,
    const float* lines2,
    int line2_count,
    jyppx_ocv_mat* image,
    int* mismatch_count);