src/OpenCvSharp/Internal/Interop/NativeMethods.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_collect_garbage")]
        internal static extern int ImgProcClaheCollectGarbage(IntPtr clahe);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_corner_sub_pix")]
        internal static extern int ImgProcCornerSubPix(IntPtr image, float[] cornersXy, int cornerCount, int winWidth, int winHeight, int zeroZoneWidth, int zeroZoneHeight, int criteriaType, int criteriaMaxCount, double criteriaEpsilon);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_corner_sub_pix")]
        internal static unsafe extern int ImgProcCornerSubPixPtr(IntPtr image, float* cornersXy, int cornerCount, int winWidth, int winHeight, int zeroZoneWidth, int zeroZoneHeight, int criteriaType, int criteriaMaxCount, double criteriaEpsilon);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_good_features_to_track_count")]
        internal static extern int ImgProcGoodFeaturesToTrackCount(IntPtr image, IntPtr mask, int maxCorners, double qualityLevel, double minDistance, int blockSize, int gradientSize, int useHarrisDetector, double k, out int cornerCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_good_features_to_track_fill")]
        internal static extern int ImgProcGoodFeaturesToTrackFill(IntPtr image, IntPtr mask, int maxCorners, double qualityLevel, double minDistance, int blockSize, int gradientSize, int useHarrisDetector, double k, float[] cornersXy, int cornerCapacity, out int cornerCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_count")]
        internal static extern int ImgProcHoughLinesCount(IntPtr image, double rho, double theta, int threshold, double srn, double stn, double minTheta, double maxTheta, int useEdgeval, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_fill")]
        internal static extern int ImgProcHoughLinesFill(IntPtr image, double rho, double theta, int threshold, double srn, double stn, double minTheta, double maxTheta, int useEdgeval, float[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_p_count")]
        internal static extern int ImgProcHoughLinesPCount(IntPtr image, double rho, double theta, int threshold, double minLineLength, double maxLineGap, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_p_fill")]
        internal static extern int ImgProcHoughLinesPFill(IntPtr image, double rho, double theta, int threshold, double minLineLength, double maxLineGap, int[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_point_set_count")]
        internal static extern int ImgProcHoughLinesPointSetCount(int[] pointsXy, int pointCount, int linesMax, int threshold, double minRho, double maxRho, double rhoStep, double minTheta, double maxTheta, double thetaStep, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_point_set_count")]
        internal static unsafe extern int ImgProcHoughLinesPointSetCountPtr(int* pointsXy, int pointCount, int linesMax, int threshold, double minRho, double maxRho, double rhoStep, double minTheta, double maxTheta, double thetaStep, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_point_set_fill")]
        internal static extern int ImgProcHoughLinesPointSetFill(int[] pointsXy, int pointCount, int linesMax, int threshold, double minRho, double maxRho, double rhoStep, double minTheta, double maxTheta, double thetaStep, double[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_lines_point_set_fill")]
        internal static unsafe extern int ImgProcHoughLinesPointSetFillPtr(int* pointsXy, int pointCount, int linesMax, int threshold, double minRho, double maxRho, double rhoStep, double minTheta, double maxTheta, double thetaStep, double[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_circles_count")]
        internal static extern int ImgProcHoughCirclesCount(IntPtr image, int method, double dp, double minDist, double param1, double param2, int minRadius, int maxRadius, out int circleCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hough_circles_fill")]
        internal static extern int ImgProcHoughCirclesFill(IntPtr image, int method, double dp, double minDist, double param1, double param2, int minRadius, int maxRadius, float[] circles, int circleCapacity, out int circleCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_calc_hist_uniform")]
        internal static extern int ImgProcCalcHistUniform(IntPtr image, IntPtr mask, int[] channels, int channelCount, IntPtr hist, int[] histSize, int histDims, float[] ranges, int rangeCount, int accumulate);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_calc_back_project_uniform")]
        internal static extern int ImgProcCalcBackProjectUniform(IntPtr image, int[] channels, int channelCount, IntPtr hist, IntPtr backProject, float[] ranges, int rangeCount, double scale);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_compare_hist")]
        internal static extern int ImgProcCompareHist(IntPtr h1, IntPtr h2, int method, out double result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_create")]
        internal static extern int ImgProcLineSegmentDetectorCreate(int refine, double scale, double sigmaScale, double quant, double angTh, double logEps, double densityTh, int nBins, out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_release")]
        internal static extern void ImgProcLineSegmentDetectorRelease(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_detect")]
        internal static extern int ImgProcLineSegmentDetectorDetect(IntPtr detector, IntPtr image, IntPtr lines, IntPtr width, IntPtr prec, IntPtr nfa);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_detect_count")]
        internal static extern int ImgProcLineSegmentDetectorDetectCount(IntPtr detector, IntPtr image, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_detect_fill")]
        internal static extern int ImgProcLineSegmentDetectorDetectFill(IntPtr detector, IntPtr image, float[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_draw_segments")]
        internal static extern int ImgProcLineSegmentDetectorDrawSegments(IntPtr detector, IntPtr image, IntPtr lines);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_draw_segments_array")]
        internal static extern int ImgProcLineSegmentDetectorDrawSegmentsArray(IntPtr detector, IntPtr image, float[] lines, int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_compare_segments")]
        internal static extern int ImgProcLineSegmentDetectorCompareSegments(IntPtr detector, int width, int height, IntPtr lines1, IntPtr lines2, IntPtr image, out int mismatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line_segment_detector_compare_segments_array")]
        internal static extern int ImgProcLineSegmentDetectorCompareSegmentsArray(IntPtr detector, int width, int height, float[] lines1, int line1Count, float[] lines2, int line2Count, IntPtr image, out int mismatchCount);
    }
}
#endif
